--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "admin-lte": "^2.4.2",
+    "bootstrap": "3.3.7",
     "coffeescript": "1.12.7",
     "vue": "^2.4.4",
     "vue-loader": "^13.2.1",
