--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "admin-lte": "^2.4.2",
     "bootstrap": "3.3.7",
     "coffeescript": "1.12.7",
+    "jquery": "^3.2.1",
     "vue": "^2.4.4",
     "vue-loader": "^13.2.1",
     "vue-template-compiler": "^2.4.4"
