Use tenant_name to define Apartment tenant

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
     - bin/*
     - config/**/*
     - node_modules/**/*
+TargetRubyVersion: 2.4
 Rails:
   Enabled: true
 Metrics/BlockLength:
