Prevent rubocop check vendor gems

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,8 @@ AllCops:
     - db/**/*
     - bin/*
     - config/**/*
+    - vendor/ruby/**/*
+    - vendor/bundle/**/*
     - node_modules/**/*
 Rails:
   Enabled: true
