--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ script:
 #  - bundle exec scss-lint app/assets/stylesheets/
   - bundle exec rubocop
   - bundle exec rspec
+  - bundle exec brakeman
 
