--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,6 +2,9 @@ default: &default
   site:
     default_domain: <%= ENV['SITE_DEFAULT_DOMAIN'] || 'tgdf.tw' %>
     name: <%= ENV['SITE_NAME'] || '台北遊戲開發者論壇' %>
+  locales:
+    - zh-TW
+    - en
 
 development:
   <<: *default
