--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: ruby
 rvm:
   - 2.4.1
-services:
-  - postgres
 addons:
   postgresql: '9.6'
+  chrome: stable
 cache:
   bundler: true
   directories:
