Fix rubocop exclude path on travis-ci

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ AllCops:
   DisplayCopNames: true
   Exclude:
     - bin/*
-    - vendor/ruby/**/*
+    - vendor/bundle/**/*
     - node_modules/**/*
     - db/schema.rb
     - .licenses/**/*
