--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ yarn-debug.log*
 .yarn-integrity
 
 /public/sitemaps
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
