--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
 before_install:
   - nvm install 10.0.0
   - npm install -g yarn
+  - gem install bundler -v '< 2.0'
 before_script:
   # CodeClimate
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
