--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@coreui/coreui": "^3.3.0",
     "@coreui/icons": "^1.0.1",
     "@popperjs/core": "^2.4.4",
+    "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "3.4.1",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
+    "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11"
