--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@coreui/icons": "^1.0.1",
     "@popperjs/core": "^2.4.4",
     "@rails/ujs": "^6.0.3-4",
-    "@rails/webpacker": "5.4.0",
+    "@rails/webpacker": "^5.4.3",
     "bootstrap": "3.4.1",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
@@ -17,6 +17,6 @@
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^4"
   }
 }
