--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
     "@coreui/icons": "^1.0.1",
     "@popperjs/core": "^2.4.4",
     "@rails/ujs": "^6.0.3-4",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "5.4.3",
     "bootstrap": "3.4.1",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "^4"
+    "webpack-dev-server": "^3"
   }
 }
