--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -4,12 +4,13 @@ on:
   push:
     branches:
       - main
-  pull_request:
 
 env:
   RUBY_VERSION: '2.7.5'
   RAILS_ENV: production
   SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   assets:
@@ -34,3 +35,39 @@ jobs:
         name: assets
         path: public/
         retention-days: 7
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    needs: assets
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download precompiled assets
+        uses: actions/download-artifact@v3
+        with:
+          name: assets
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
