Configure CarrierWave to allow use S3 mode

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -11,6 +11,11 @@ default: &default
       - personal
       - group
       - student
+  s3:
+    enabled: <%= ENV.fetch('SETTINGS__S3__ENABLED', false) %>
+    access_key_id: <%= ENV['SETTINGS__S3__ACCESS_KEY_ID'] %>
+    secret_access_key: <%= ENV['SETTINGS__S3__SECRET_ACCESS_KEY'] %>
+    bucket: <%= ENV['SETTINGS__S3__BUCKET'] %>
 
 development:
   <<: *default
