Fix precompiled assets not put in correct path when containerize

--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -50,6 +50,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: assets
+          path: public/
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
