--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,3 +72,44 @@ jobs:
         CC_TEST_REPORTER_ID: 095aa40147ca31736e28d41cdec3fc606112be588fa23bbfd155cbdf7f5aafa7
       with:
         coverageCommand: bundle exec rspec
+
+  cucmber:
+    runs-on: ubuntu-latest
+    services:
+        postgres:
+          image: postgres
+          env:
+            POSTGRES_USER: tgdf
+            POSTGRES_PASSWORD: tgdf
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            - 5432:5432
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ env.RUBY_VERSION }}
+        bundler-cache: true
+    - name: Set up Node
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+        cache: 'yarn'
+    - run: yarn install
+    - name: Run Migration
+      run: bundle exec rake db:migrate
+    - name: Run Cucumber
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: 095aa40147ca31736e28d41cdec3fc606112be588fa23bbfd155cbdf7f5aafa7
+      with:
+        coverageCommand: cucumber -f json -o tmp/cucumber-report.json
+    - uses: deblockt/cucumber-report-annotations-action@v1.7
+      with:
+        access-token: ${{ secrets.GITHUB_TOKEN }}
+        path: "tmp/cucumber-report.json"
