--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,7 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: 095aa40147ca31736e28d41cdec3fc606112be588fa23bbfd155cbdf7f5aafa7
       with:
-        coverageCommand: cucumber -f json -o tmp/cucumber-report.json
+        coverageCommand: bundle exec cucumber -f json -o tmp/cucumber-report.json
     - uses: deblockt/cucumber-report-annotations-action@v1.7
       with:
         access-token: ${{ secrets.GITHUB_TOKEN }}
