--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
