Failed trivy only severity CRITICAL

--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -87,5 +87,4 @@ jobs:
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL'
