Fix incorrect docker build cache source

--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -77,7 +77,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
           cache-to: type=inline
 
       - name: Run Trivy vulnerability scanner
