--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -70,6 +70,10 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=ref,event=branch
 
+      - name: Add short SHA information
+        id: commit
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -79,6 +83,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
           cache-to: type=inline
+          build-args: |
+            REVISION=${{ steps.commit.outputs.sha_short }}
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
