--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -74,6 +74,9 @@ jobs:
         id: commit
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
@@ -81,8 +84,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
-          cache-to: type=inline
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             REVISION=${{ steps.commit.outputs.sha_short }}
 
