--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.1.0",
-    "@popperjs/core": "^2.5.4",
+    "@popperjs/core": "^2.11.5",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "3.4.1",
+    "bootstrap": "^4.6.1",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^10.0.0",
     "turbolinks": "^5.2.0",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.1",
-    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
     "webpack-dev-server": "^3"
+  },
+  "scripts": {
+    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
