--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@popperjs/core": "^2.11.5",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
     "sass": "^1.53.0",
