--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@popperjs/core": "^2.11.5",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.3",
+    "autoprefixer": "^10.4.8",
     "jquery": "^3.4.0",
     "perfect-scrollbar": "^1.5.0",
+    "postcss": "^8.4.16",
     "sass": "^1.53.0",
     "sass-loader": "^10.0.0",
+    "tailwindcss": "^3.1.8",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -22,6 +23,6 @@
     "webpack-dev-server": "^3"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
