--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -72,7 +72,7 @@ jobs:
 
       - name: Add short SHA information
         id: commit
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
