Trigger deployment when docker image is built

--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -97,3 +97,18 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL'
+
+  trigger-deployment:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    permissions:
+      id-token: write
+      contents: read
+    strategy:
+      matrix:
+        environment: [beta]
+    steps:
+      uses: ./.github/workflows/deployment.yml
+      with:
+        image: ${{ steps.meta.outputs.tags[0] }}
+        environment: ${{ matrix.environment }}
