Make workflow_call receive string as environment

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,7 +8,7 @@ on:
         type: string
       environment:
         required: true
-        type: environment
+        type: string
 
   workflow_dispatch:
     inputs:
