--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -41,6 +41,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      tags: ${{ steps.meta.outputs.tags }}
 
     steps:
       - name: Checkout repository
@@ -97,8 +99,6 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL'
-    outputs:
-      tags: ${{ steps.meta.outputs.tags }}
 
   trigger-deployment:
     needs: build-and-push-image
@@ -110,6 +110,6 @@ jobs:
         environment: [beta]
     uses: ./.github/workflows/deployment.yml
     with:
-      image: ${{ needs.build-and-push-image.outputs.tags[0] }}
+      image: ${{ needs.build-and-push-image.outputs.tags }}
       environment: ${{ matrix.environment }}
     secrets: inherit
