--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.1.0",
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.2.4",
     "@popperjs/core": "^2.11.5",
     "@rails/ujs": "^6.0.3-4",
     "@rails/webpacker": "5.4.3",
