--- a/package.json
+++ b/package.json
@@ -7,26 +7,14 @@
     "@coreui/icons": "^2.1.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
-    "@popperjs/core": "^2.11.5",
     "@rails/ujs": "^6.0.3-4",
-    "@rails/webpacker": "5.4.3",
-    "autoprefixer": "^10.4.8",
-    "esbuild": "^0.16.7",
-    "jquery": "^3.4.0",
+    "@popperjs/core": "^2.11.5",
     "perfect-scrollbar": "^1.5.0",
-    "postcss": "^8.4.16",
-    "sass": "^1.53.0",
-    "sass-loader": "^10.0.0",
-    "tailwindcss": "^3.1.8",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^3"
+    "esbuild": "^0.16.7",
+    "tailwindcss": "^3.1.8"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets "
   }
 }
