--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  RUBY_VERSION: '2.7.5'
+  RUBY_VERSION: '2.7.6'
   RAILS_ENV: test
   DATABASE_URL: "postgres://tgdf:tgdf@localhost/tgdf"
 
@@ -67,11 +67,13 @@ jobs:
     - name: Run Migration
       run: bundle exec rake db:migrate
     - name: Run RSpec
-      uses: paambaati/codeclimate-action@v3.0.0
-      env:
-        CC_TEST_REPORTER_ID: 095aa40147ca31736e28d41cdec3fc606112be588fa23bbfd155cbdf7f5aafa7
+      run: bundle exec rspec
+    - name: Archive RSpec coverage report
+      uses: actions/upload-artifact@v3
       with:
-        coverageCommand: bundle exec rspec
+        name: simplecov-resultset-rspec
+        path: coverage/
+        retention-days: 1
 
   cucmber:
     runs-on: ubuntu-latest
@@ -104,12 +106,42 @@ jobs:
     - name: Run Migration
       run: bundle exec rake db:migrate
     - name: Run Cucumber
-      uses: paambaati/codeclimate-action@v3.0.0
-      env:
-        CC_TEST_REPORTER_ID: 095aa40147ca31736e28d41cdec3fc606112be588fa23bbfd155cbdf7f5aafa7
+      run: bundle exec cucumber -f json -o tmp/cucumber-report.json
+    - name: Archive Cucumber coverage report
+      uses: actions/upload-artifact@v3
       with:
-        coverageCommand: bundle exec cucumber -f json -o tmp/cucumber-report.json
+        name: simplecov-resultset-cucumber
+        path: coverage/
+        retention-days: 1
     - uses: deblockt/cucumber-report-annotations-action@v1.7
       with:
         access-token: ${{ secrets.GITHUB_TOKEN }}
         path: "tmp/cucumber-report.json"
+  report-coverage:
+    runs-on: ubuntu-latest
+    needs:
+      - rspec
+      - cucumber
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ env.RUBY_VERSION }}
+        bundler-cache: true
+    - name: Download RSpec coverage report
+      uses: actions/download-artifact@v3
+      with:
+        name: simplecov-resultset-rspec
+        path: simplecov-resultset-rspec/
+    - name: Download Cucumber coverage report
+      uses: actions/download-artifact@v3
+      with:
+        name: simplecov-resultset-cucumber
+        path: simplecov-resultset-cucumber/
+    - name: Upload coverage report
+      uses: paambaati/codeclimate-action@v3.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: bundle exec rake coverage:report
