--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
     - run: yarn install
     - name: Prepare for Test
       run: |
-        bundle exec rake test:prepare
+        bundle exec rake assets:precompile
         bundle exec rake db:migrate
     - name: Run RSpec
       run: bundle exec rspec
@@ -107,7 +107,7 @@ jobs:
     - run: yarn install
     - name: Prepare for Test
       run: |
-        bundle exec rake test:prepare
+        bundle exec rake assets:precompile
         bundle exec rake db:migrate
     - name: Run Cucumber
       run: bundle exec cucumber -f json -o tmp/cucumber-report.json
