--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,19 @@ jobs:
         path: "tmp/cucumber-report.json"
   report-coverage:
     runs-on: ubuntu-latest
+    services:
+        postgres:
+          image: postgres
+          env:
+            POSTGRES_USER: tgdf
+            POSTGRES_PASSWORD: tgdf
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
+          ports:
+            - 5432:5432
     needs:
       - rspec
       - cucumber
