--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@coreui/icons": "^2.1.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
-    "@rails/ujs": "^6.0.3-4",
     "@popperjs/core": "^2.11.5",
-    "perfect-scrollbar": "^1.5.0",
+    "@rails/ujs": "^6.0.3-4",
+    "@tailwindcss/typography": "^0.5.8",
     "esbuild": "^0.16.7",
+    "perfect-scrollbar": "^1.5.0",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
