--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@tailwindcss/typography": "^0.5.8",
     "esbuild": "^0.16.7",
     "perfect-scrollbar": "^1.5.0",
+    "stimulus-carousel": "^5.0.1",
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/theme.css -o ./app/assets/builds/theme.css --minify",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets "
   }
 }
