--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,6 +158,7 @@ jobs:
         name: simplecov-resultset-cucumber
         path: simplecov-resultset-cucumber/
     - name: Upload coverage report
+      if: ${{ github.ref_name == 'main' }}
       uses: paambaati/codeclimate-action@v3.0.0
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
