Update plan list section name

--- a/app/components/plan_list_component.yml
+++ b/app/components/plan_list_component.yml
@@ -1,7 +1,9 @@
 en:
+  participate: 'How to <span class="text-red-500">Participate</span>'
   ticket: '<span class="text-red-500">Passes</span> & Prices'
   streaming: 'Live <span class="text-red-500">Streaming</span>'
 
 zh-TW:
-  ticket: <span class="text-red-500">購票</span>與售價
-  streaming: 線上<span class="text-red-500">直播</span>
+  participate: '如何<span class="text-red-500">參與</span>'
+  ticket: '<span class="text-red-500">購票</span>與售價'
+  streaming: '線上<span class="text-red-500">直播</span>'
