--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -43,24 +43,24 @@ jobs:
       packages: write
     outputs:
       sha-tag: ${{ fromJSON(steps.meta.outputs.json).tags[1] }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Download precompiled assets
         uses: actions/download-artifact@v3
         with:
           name: assets
           path: public/
-
+      - name: set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
@@ -69,26 +69,21 @@ jobs:
           tags: |
             type=sha
             type=ref,event=branch
-
       - name: Add short SHA information
         id: commit
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
             REVISION=${{ steps.commit.outputs.sha_short }}
-
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -97,7 +92,6 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL'
-
   trigger-deployment:
     needs: build-and-push-image
     permissions:
