Update cucumber action permission

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,9 @@ jobs:
 
   cucumber:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      checks: write
     services:
         postgres:
           image: postgres
