--- a/.github/workflows/containerize.yml
+++ b/.github/workflows/containerize.yml
@@ -40,7 +40,7 @@ jobs:
         path: public/
         retention-days: 7
   build-and-push-image:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: assets
     permissions:
       contents: read
