--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
 env:
   RUBY_VERSION: '3.3.2'
   RAILS_ENV: test
+  RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
   DATABASE_URL: "postgres://tgdf:tgdf@localhost/tgdf"
 
 jobs:
