--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -62,6 +62,9 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Add short SHA information
+        id: commit
+        run: echo "version=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
     - name: Create Sentry release
       uses: getsentry/action-release@v1
       env:
@@ -70,3 +73,4 @@ jobs:
         SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
       with:
         environment: ${{ inputs.environment }}
+        version: ${{ steps.commit.outputs.version }}
