Ignore Sentry release error

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -67,6 +67,7 @@ jobs:
       run: echo "version=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
     - name: Create Sentry release
       uses: getsentry/action-release@v1
+      continue-on-error: true
       env:
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
