--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,10 @@
 require:
-  - rubocop-rails
   - rubocop-performance
   - rubocop-rspec
   - rubocop-capybara
+
+inherit_gem:
+  rubocop-rails-omakase: rubocop.yml
 
 AllCops:
   TargetRubyVersion: 3.2
